@@ -10,8 +10,8 @@ template <typename DDS_TYPE, typename CCM_TYPE>
 CIAO::DDS4CCM::RTI::DataReaderHandler_T<DDS_TYPE, CCM_TYPE>::DataReaderHandler_T (
             typename CCM_TYPE::listener_type::_ptr_type listener,
             typename DDS_TYPE::data_reader * reader)
-      : listener_ (CCM_TYPE::listener_type::_duplicate (listener)),
-        reader_ (reader)
+      : reader_ (reader),
+        listener_ (CCM_TYPE::listener_type::_duplicate (listener)),
 {
 }
 
